Fixing SecurityConfig